--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,4 +3,4 @@ version: '${project.version}'
 main: net.daechler.inventoryprotector.InventoryProtector
 api-version: 1.19
 authors: [ Daechler ]
-description: This plugin ensures that if a player dies and this was not caused by another player, he keeps his inventory.
+description: If a player dies, and it was not caused by another player, they keep their inventory.
